--- a/client/src/components/Register.css
+++ b/client/src/components/Register.css
@@ -1,10 +1,32 @@
+.voprosreg{
+    display: flex;
+    justify-content: center;
 
+}
 
+.fullreg{
+    display: grid;
+    justify-content: center;
+    gap: 60px;
+    margin-top: 250px;
 
+}
+
+.buttonreg{
+    display: flex;
+    justify-content: center;
+}
 
 .registerdesing{
     display: flex;
     justify-content: space-between;
-    gap: 30px;
+    gap: 70px;
     margin-bottom: 20px;
+    margin-left: 40px;
+}
+
+.nameglav{
+    display: flex;
+    justify-content: center;
+    margin-right: 20px;
 }
